packages/rust/crates/xiuxian-skills/tests/integration/snapshots/integration_test__skill_scanner_snapshots__canonical_payload_tool_reference.snap
---
source: packages/rust/crates/xiuxian-skills/tests/integration/skill_scanner_snapshots.rs
assertion_line: 216
expression: canonical
---
{
  "metadata": {
    "authors": [],
    "description": "Research skill",
    "intents": [],
    "permissions": [],
    "repository": "",
    "require_refs": [],
    "routing_keywords": [
      "research"
    ],
    "skill_name": "researcher",
    "version": "1.0.0"
  },
  "references": {
    "run_research_graph": {
      "content_preview": "",
      "doc_type": "reference",
      "file_hash": "",
      "file_path": "<SKILL_PATH>/references/run_research_graph.md",
      "for_skills": [
        "researcher"
      ],
      "for_tools": [
        "researcher.run_research_graph"
      ],
      "keywords": [],
      "ref_name": "run_research_graph",
      "sections": [],
      "skill_name": "researcher",
      "title": "Run Research Graph"
    }
  },
  "skill_md_path": "<SKILL_PATH>/SKILL.md",
  "skill_name": "researcher",
  "skill_tools": {
    "researcher.run_research_graph": {
      "skill_tool_references": {
        "researcher.references.run_research_graph": "<SKILL_PATH>/references/run_research_graph.md"
      },
      "tool": {
        "annotations": {
          "destructive": false,
          "idempotent": false,
          "openWorld": false,
          "readOnly": false
        },
        "category": "research",
        "description": "Run the graph",
        "docstring": "",
        "execution_mode": "async",
        "file_hash": "abc",
        "file_path": "researcher/scripts/commands.py",
        "function_name": "run_research_graph",
        "input_schema": "{}",
        "intents": [],
        "keywords": [
          "research"
        ],
        "parameters": [],
        "resource_uri": "",
        "skill_name": "researcher",
        "skill_tools_refers": [],
        "tool_name": "researcher.run_research_graph"
      }
    }
  }
}
