packages/rust/crates/xiuxian-skills/tests/integration/snapshots/integration_test__skill_scanner_snapshots__scan_all_multiple_skills.snap
---
source: packages/rust/crates/xiuxian-skills/tests/integration/skill_scanner_snapshots.rs
assertion_line: 154
expression: metadatas
---
[
  {
    "authors": [],
    "description": "",
    "intents": [],
    "permissions": [],
    "repository": "",
    "require_refs": [],
    "routing_keywords": [
      "commit",
      "branch"
    ],
    "skill_name": "git",
    "version": "1.0"
  },
  {
    "authors": [],
    "description": "",
    "intents": [],
    "permissions": [],
    "repository": "",
    "require_refs": [],
    "routing_keywords": [
      "write",
      "edit"
    ],
    "skill_name": "writer",
    "version": "1.0"
  }
]
