packages/rust/crates/xiuxian-skills/tests/integration/snapshots/integration_test__skill_scanner_snapshots__structure_report_summary.snap
---
source: packages/rust/crates/xiuxian-skills/tests/integration/skill_scanner_snapshots.rs
assertion_line: 62
expression: canonicalize_json(summary)
---
{
  "issues": [
    "missing default(strict_mode) item `assets/` at <SKILL_PATH>/assets/",
    "missing default(strict_mode) item `tests/` at <SKILL_PATH>/tests/"
  ],
  "valid": false
}
